# bld-matcher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  NAS_DEPLOY.md  NOTICE  OPENCLAW_API.md  PROJECT_BRIEF.md  PROJECT_CONSTITUTION.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py  项目交接说明.md
app/: bld_sort.py  catalog_export.py  config.py  database.py  drawings.py  excel_io.py  helpers.py  locks.py  matcher.py  material_sheet.py  migrations.py  price_import.py  product_media.py  product_status.py  purchase_contract.py  quote_import.py  security.py
changes/: 20260711-api-platform-foundation.json  20260711-contract-document-decomposition.json  20260711-css-governance.json  20260711-decomposition-baseline.json  20260711-domain-page-protocol.json  20260711-inquiry-excel-decomposition.json  20260711-material-persistence-decomposition.json  20260711-page-assets.json  20260711-product-inquiry-core.json  20260711-project-foundation.json  20260711-quote-vertical-slice.json  20260711-route-adapters.json  20260711-runtime-governance.json  20260714-product-brand-normalization.json  20260714-product-catalog-columns-filters.json  20260715-inquiry-oversized-number-guard.json  20260716-catalog-import-controls.json  20260716-catalog-import-template.json  20260716-remove-price-import-web.json  20260717-business-data-sync.json  20260717-oe-e-code-matching.json  20260717-quote-page-header.json  20260717-sqlite-connection-lifecycle.json  20260717-tube-catalog.json  20260717-tube-column-filters.json  20260718-resizable-data-grids.json  (+25 more)
(+311 files in other folders)
