[project]
name = "bld-matcher"
version = "0.1.0"
description = "BLD internal inquiry and product operations system"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Flask==3.0.3",
  "gunicorn==22.0.0",
  "openpyxl==3.1.5",
  "Pillow==11.3.0",
  "pillow-heif==1.1.1",
  "reportlab==4.4.3",
  "xlrd==2.0.1",
  "xlwt==1.3.0",
  "xlutils==2.0.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
